--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/modern-normalise.css" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,29 +16,33 @@
   </head>
   <body>
     <!-- Header -->
-    <header>
-      <nav class="site-nav">
-        <a href="./index.html" class="logo link"
-          >Web<span class="logo-studio">Studio</span></a
-        >
-        <ul class="nav list">
-          <li><a href="./index.html" class="link">Studio</a></li>
-          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-          <li><a href="" class="link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="feedback">
-        <ul class="feedback-item list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+    <header class="header">
+      <div class="container">
+        <nav class="site-nav">
+          <a href="./index.html" class="logo link"
+            >Web<span class="logo-studio">Studio</span></a
+          >
+          <ul class="nav-list list">
+            <li class="item"><a href="./index.html" class="link">Studio</a></li>
+            <li class="item">
+              <a href="./portfolio.html" class="link">Portfolio</a>
+            </li>
+            <li class="item"><a href="" class="link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="feedback">
+          <ul class="feedback-list list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <!-- Main -->
@@ -45,95 +50,106 @@
     <main>
       <!-- hero -->
       <section class="hero">
-        <h1 class="hero-tittle">Effective Solutions for Your Business</h1>
-        <button type="button" class="pointer">Order Service</button>
+        <div class="container">
+          <h1 class="hero-tittle">Effective Solutions for Your Business</h1>
+          <button type="button" class="pointer">Order Service</button>
+        </div>
       </section>
 
       <!-- Skills -->
       <section class="skills-section">
-        <h2 class="skills-main-tittle">Skills</h2>
-        <ul class="skills-list list">
-          <li>
-            <h3 class="secondary-tittle">Strategy</h3>
-            <p class="skill-item">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="secondary-tittle">Punctuality</h3>
-            <p class="skill-item">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="secondary-tittle">Diligence</h3>
-            <p class="skill-item">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
+        <div class="container">
+          <h2 class="skills-main-tittle">Skills</h2>
+          <ul class="skills-list list">
+            <li>
+              <h3 class="secondary-tittle">Strategy</h3>
+              <p class="skill-item">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="secondary-tittle">Punctuality</h3>
+              <p class="skill-item">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="secondary-tittle">Diligence</h3>
+              <p class="skill-item">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
 
-          <li>
-            <h3 class="secondary-tittle">Technologies</h3>
-            <p class="skill-item">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+            <li>
+              <h3 class="secondary-tittle">Technologies</h3>
+              <p class="skill-item">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Examples -->
       <section class="examples">
-        <h2 class="examples-tittle">What are we doing</h2>
-        <ul class="examples list">
-          <li><img src="./images/img1.jpg" alt="img1" width="360" /></li>
-          <li><img src="./images/img2.jpg" alt="img2" width="360" /></li>
-          <li>
-            <img src="./images/img3.jpg" alt="img3" width="360" />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="examples-tittle">What are we doing</h2>
+          <ul class="examples list">
+            <li><img src="./images/img1.jpg" alt="img1" width="360" /></li>
+            <li><img src="./images/img2.jpg" alt="img2" width="360" /></li>
+            <li>
+              <img src="./images/img3.jpg" alt="img3" width="360" />
+            </li>
+          </ul>
+        </div>
       </section>
+
+      <!-- Team -->
       <section class="team">
-        <!-- Team -->
-        <h2 class="team-tittle">Our Team</h2>
-        <ul class="team-item list">
-          <li class="team-text">
-            <img src="./images/team-card1.jpg" alt="photo1" width="264" />
-            <h3 class="secondary-tittle">Mark Guerrero</h3>
-            <p class="specialty">Product Designer</p>
-          </li>
-          <li class="team-text">
-            <img src="./images/team-card2.jpg" alt="photo2" width="264" />
-            <h3 class="secondary-tittle">Tom Ford</h3>
-            <p class="specialty">Frontend Developer</p>
-          </li>
-          <li class="team-text">
-            <img src="./images/team-card3.jpg" alt="photo3" width="264" />
-            <h3 class="secondary-tittle">Camila Garcia</h3>
-            <p class="specialty">Marketing</p>
-          </li>
-          <li class="team-text">
-            <img src="./images/team-card4.jpg" alt="photo4" width="264" />
-            <h3 class="secondary-tittle">Daniel Wilson</h3>
-            <p class="specialty">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-tittle">Our Team</h2>
+          <ul class="team-item list">
+            <li class="team-text">
+              <img src="./images/team-card1.jpg" alt="photo1" width="264" />
+              <h3 class="secondary-tittle">Mark Guerrero</h3>
+              <p class="specialty">Product Designer</p>
+            </li>
+            <li class="team-text">
+              <img src="./images/team-card2.jpg" alt="photo2" width="264" />
+              <h3 class="secondary-tittle">Tom Ford</h3>
+              <p class="specialty">Frontend Developer</p>
+            </li>
+            <li class="team-text">
+              <img src="./images/team-card3.jpg" alt="photo3" width="264" />
+              <h3 class="secondary-tittle">Camila Garcia</h3>
+              <p class="specialty">Marketing</p>
+            </li>
+            <li class="team-text">
+              <img src="./images/team-card4.jpg" alt="photo4" width="264" />
+              <h3 class="secondary-tittle">Daniel Wilson</h3>
+              <p class="specialty">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- Footer -->
 
     <footer class="footer-section">
-      <a href="./index.html" class="logo link"
-        >Web<span class="footer-studio">Studio</span></a
-      >
-      <p class="footer-item">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="logo link"
+          >Web<span class="footer-studio">Studio</span></a
+        >
+        <p class="footer-item">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
