--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         </nav>
         <address class="feedback">
           <ul class="feedback-list list">
-            <li>
+            <li class="item">
               <a href="mailto:info@devstudio.com" class="link"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="item">
               <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
             </li>
           </ul>
@@ -61,31 +61,31 @@
         <div class="container">
           <h2 class="skills-main-tittle">Skills</h2>
           <ul class="skills-list list">
-            <li>
+            <li class="item">
               <h3 class="secondary-tittle">Strategy</h3>
-              <p class="skill-item">
+              <p class="skill-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="secondary-tittle">Punctuality</h3>
-              <p class="skill-item">
+              <p class="skill-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="secondary-tittle">Diligence</h3>
-              <p class="skill-item">
+              <p class="skill-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
 
-            <li>
+            <li class="item">
               <h3 class="secondary-tittle">Technologies</h3>
-              <p class="skill-item">
+              <p class="skill-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
@@ -98,10 +98,14 @@
       <section class="examples">
         <div class="container">
           <h2 class="examples-tittle">What are we doing</h2>
-          <ul class="examples list">
-            <li><img src="./images/img1.jpg" alt="img1" width="360" /></li>
-            <li><img src="./images/img2.jpg" alt="img2" width="360" /></li>
-            <li>
+          <ul class="examples-list list">
+            <li class="item">
+              <img src="./images/img1.jpg" alt="img1" width="360" />
+            </li>
+            <li class="item">
+              <img src="./images/img2.jpg" alt="img2" width="360" />
+            </li>
+            <li class="item">
               <img src="./images/img3.jpg" alt="img3" width="360" />
             </li>
           </ul>
@@ -112,23 +116,23 @@
       <section class="team">
         <div class="container">
           <h2 class="team-tittle">Our Team</h2>
-          <ul class="team-item list">
-            <li class="team-text">
+          <ul class="team-list list">
+            <li class="item">
               <img src="./images/team-card1.jpg" alt="photo1" width="264" />
               <h3 class="secondary-tittle">Mark Guerrero</h3>
               <p class="specialty">Product Designer</p>
             </li>
-            <li class="team-text">
+            <li class="item">
               <img src="./images/team-card2.jpg" alt="photo2" width="264" />
               <h3 class="secondary-tittle">Tom Ford</h3>
               <p class="specialty">Frontend Developer</p>
             </li>
-            <li class="team-text">
+            <li class="item">
               <img src="./images/team-card3.jpg" alt="photo3" width="264" />
               <h3 class="secondary-tittle">Camila Garcia</h3>
               <p class="specialty">Marketing</p>
             </li>
-            <li class="team-text">
+            <li class="item">
               <img src="./images/team-card4.jpg" alt="photo4" width="264" />
               <h3 class="secondary-tittle">Daniel Wilson</h3>
               <p class="specialty">UI Designer</p>
