--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <a href="./index.html" class="logo link"
           >Web<span class="footer-studio">Studio</span></a
         >
-        <p class="footer-item">
+        <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
