--- a/portfolio.html
+++ b/portfolio.html
@@ -43,144 +43,158 @@
         </address>
       </div>
     </header>
-
     <!-- Main -->
 
     <main>
       <section class="portfolio">
-        <h1 class="portfolio-tittle">Portfolio</h1>
-        <ul class="portfolio-buttons list">
-          <li><button type="button" class="item">All</button></li>
-          <li><button type="button" class="item">Web Site</button></li>
-          <li><button type="button" class="item">App</button></li>
-          <li><button type="button" class="item">Design</button></li>
-          <li><button type="button" class="item">Marketing</button></li>
-        </ul>
+        <div class="container">
+          <h1 class="portfolio-tittle">Portfolio</h1>
+          <ul class="portfolio-buttons list">
+            <li class="item">
+              <button type="button" class="btn">All</button>
+            </li>
+            <li class="item">
+              <button type="button" class="btn">Web Site</button>
+            </li>
+            <li class="item">
+              <button type="button" class="btn">App</button>
+            </li>
+            <li class="item">
+              <button type="button" class="btn">Design</button>
+            </li>
+            <li class="item">
+              <button type="button" class="btn">Marketing</button>
+            </li>
+          </ul>
 
-        <ul class="portfolio-item list">
-          <li>
-            <a href="" class="works link"
-              ><img
-                src="./images/banking.jpg"
-                alt="Banking"
-                width="360"
-                height="300"
-              />
-              <h2 class="secondary-tittle">Banking App Interface Concept</h2>
-              <p class="work-item">App</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="works link"
-              ><img
-                src="./images/payment.jpg"
-                alt="payment"
-                width="360"
-                height="300"
-              />
-              <h2 class="secondary-tittle">Cashless Payment</h2>
-              <p class="work-item">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="works link"
-              ><img
-                src="./images/meditaion.jpg"
-                alt="madiation"
-                width="360"
-                height="300"
-              />
-              <h2 class="secondary-tittle">Meditation App</h2>
-              <p class="work-item">App</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="works link"
-              ><img
-                src="./images/taxi.jpg"
-                alt="Taxi"
-                width="360"
-                height="300"
-              />
-              <h2 class="secondary-tittle">Taxi Service</h2>
-              <p class="work-item">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="works link">
-              <img
-                src="./images/illustrations.jpg"
-                alt="Screen"
-                width="360"
-                height="300"
-              />
-              <h2 class="secondary-tittle">Screen Illustrations</h2>
-              <p class="work-item">Design</p></a
-            >
-          </li>
+          <ul class="portfolio-list list">
+            <li class="item">
+              <a href="" class="works link"
+                ><img
+                  src="./images/banking.jpg"
+                  alt="Banking"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="secondary-tittle">Banking App Interface Concept</h2>
+                <p class="work-text">App</p></a
+              >
+            </li>
+            <li class="item">
+              <a href="" class="works link"
+                ><img
+                  src="./images/payment.jpg"
+                  alt="payment"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="secondary-tittle">Cashless Payment</h2>
+                <p class="work-text">Marketing</p></a
+              >
+            </li>
+            <li class="item">
+              <a href="" class="works link"
+                ><img
+                  src="./images/meditaion.jpg"
+                  alt="madiation"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="secondary-tittle">Meditation App</h2>
+                <p class="work-text">App</p></a
+              >
+            </li>
+            <li class="item">
+              <a href="" class="works link"
+                ><img
+                  src="./images/taxi.jpg"
+                  alt="Taxi"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="secondary-tittle">Taxi Service</h2>
+                <p class="work-text">Marketing</p></a
+              >
+            </li>
+            <li class="item">
+              <a href="" class="works link">
+                <img
+                  src="./images/illustrations.jpg"
+                  alt="Screen"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="secondary-tittle">Screen Illustrations</h2>
+                <p class="work-text">Design</p></a
+              >
+            </li>
 
-          <li>
-            <a href="" class="works link"
-              ><img
-                src="./images/courses.jpg"
-                alt="Curses"
-                width="360"
-                height="300"
-              />
-              <h2 class="secondary-tittle">Online Courses</h2>
-              <p class="work-item">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="works link">
-              <img
-                src="./images/instagram.jpg"
-                alt="instagram"
-                width="360"
-                height="300"
-              />
-              <h2 class="secondary-tittle">Instagram Stories Concept</h2>
-              <p class="work-item">Design</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="works link">
-              <img
-                src="./images/food.jpg"
-                alt="food"
-                width="360"
-                height="300"
-              />
-              <h2 class="secondary-tittle">Organic Food</h2>
-              <p class="work-item">Web Site</p></a
-            >
-          </li>
+            <li class="item">
+              <a href="" class="works link"
+                ><img
+                  src="./images/courses.jpg"
+                  alt="Curses"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="secondary-tittle">Online Courses</h2>
+                <p class="work-text">Marketing</p></a
+              >
+            </li>
+            <li class="item">
+              <a href="" class="works link">
+                <img
+                  src="./images/instagram.jpg"
+                  alt="instagram"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="secondary-tittle">Instagram Stories Concept</h2>
+                <p class="work-text">Design</p></a
+              >
+            </li>
+            <li class="item">
+              <a href="" class="works link">
+                <img
+                  src="./images/food.jpg"
+                  alt="food"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="secondary-tittle">Organic Food</h2>
+                <p class="work-text">Web Site</p></a
+              >
+            </li>
 
-          <li>
-            <a href="" class="works link">
-              <img
-                src="./images/coffee.jpg"
-                alt="coffe"
-                width="360"
-                height="300"
-              />
-              <h2 class="secondary-tittle">Fresh Coffee</h2>
-              <p class="work-item">Web Site</p></a
-            >
-          </li>
-        </ul>
+            <li class="item">
+              <a href="" class="works link">
+                <img
+                  src="./images/coffee.jpg"
+                  alt="coffe"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="secondary-tittle">Fresh Coffee</h2>
+                <p class="work-text">Web Site</p></a
+              >
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- Footer -->
+
     <footer class="footer-section">
-      <a href="./index.html" class="logo link"
-        >Web<span class="footer-studio">Studio</span></a
-      >
-      <p class="footer-item">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="logo link"
+          >Web<span class="footer-studio">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
