--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
     <main>
       <section class="portfolio">
         <div class="container">
-          <h1 class="portfolio-tittle">Portfolio</h1>
+          <h1 class="visually-hidden">Portfolio</h1>
           <ul class="portfolio-buttons list">
             <li class="item">
               <button type="button" class="btn">All</button>
