--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <!-- Skills -->
       <section class="skills-section">
         <div class="container">
-          <h2 class="skills-main-tittle">Skills</h2>
+          <h2 class="visually-hidden">Skills</h2>
           <ul class="skills-list list">
             <li class="item">
               <h3 class="secondary-tittle">Strategy</h3>
@@ -125,23 +125,31 @@
           <ul class="team-list list">
             <li class="item">
               <img src="./images/team-card1.jpg" alt="photo1" width="264" />
-              <h3 class="secondary-tittle">Mark Guerrero</h3>
-              <p class="specialty">Product Designer</p>
+              <div class="team-text">
+                <h3 class="secondary-tittle">Mark Guerrero</h3>
+                <p class="specialty">Product Designer</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/team-card2.jpg" alt="photo2" width="264" />
-              <h3 class="secondary-tittle">Tom Ford</h3>
-              <p class="specialty">Frontend Developer</p>
+              <div class="team-text">
+                <h3 class="secondary-tittle">Tom Ford</h3>
+                <p class="specialty">Frontend Developer</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/team-card3.jpg" alt="photo3" width="264" />
-              <h3 class="secondary-tittle">Camila Garcia</h3>
-              <p class="specialty">Marketing</p>
+              <div class="team-text">
+                <h3 class="secondary-tittle">Camila Garcia</h3>
+                <p class="specialty">Marketing</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/team-card4.jpg" alt="photo4" width="264" />
-              <h3 class="secondary-tittle">Daniel Wilson</h3>
-              <p class="specialty">UI Designer</p>
+              <div class="team-text">
+                <h3 class="secondary-tittle">Daniel Wilson</h3>
+                <p class="specialty">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
