--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -76,9 +83,13 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="secondary-tittle">Banking App Interface Concept</h2>
-                <p class="work-text">App</p></a
-              >
+                <div class="portfolio-text">
+                  <h2 class="secondary-tittle">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="work-text">App</p>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="" class="works link"
@@ -88,9 +99,11 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="secondary-tittle">Cashless Payment</h2>
-                <p class="work-text">Marketing</p></a
-              >
+                <div class="portfolio-text">
+                  <h2 class="secondary-tittle">Cashless Payment</h2>
+                  <p class="work-text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="" class="works link"
@@ -100,9 +113,11 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="secondary-tittle">Meditation App</h2>
-                <p class="work-text">App</p></a
-              >
+                <div class="portfolio-text">
+                  <h2 class="secondary-tittle">Meditation App</h2>
+                  <p class="work-text">App</p>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="" class="works link"
@@ -112,9 +127,11 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="secondary-tittle">Taxi Service</h2>
-                <p class="work-text">Marketing</p></a
-              >
+                <div class="portfolio-text">
+                  <h2 class="secondary-tittle">Taxi Service</h2>
+                  <p class="work-text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="" class="works link">
@@ -124,9 +141,11 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="secondary-tittle">Screen Illustrations</h2>
-                <p class="work-text">Design</p></a
-              >
+                <div class="portfolio-text">
+                  <h2 class="secondary-tittle">Screen Illustrations</h2>
+                  <p class="work-text">Design</p>
+                </div>
+              </a>
             </li>
 
             <li class="item">
@@ -137,9 +156,11 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="secondary-tittle">Online Courses</h2>
-                <p class="work-text">Marketing</p></a
-              >
+                <div class="portfolio-text">
+                  <h2 class="secondary-tittle">Online Courses</h2>
+                  <p class="work-text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="" class="works link">
@@ -149,9 +170,11 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="secondary-tittle">Instagram Stories Concept</h2>
-                <p class="work-text">Design</p></a
-              >
+                <div class="portfolio-text">
+                  <h2 class="secondary-tittle">Instagram Stories Concept</h2>
+                  <p class="work-text">Design</p>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="" class="works link">
@@ -161,9 +184,11 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="secondary-tittle">Organic Food</h2>
-                <p class="work-text">Web Site</p></a
-              >
+                <div class="portfolio-text">
+                  <h2 class="secondary-tittle">Organic Food</h2>
+                  <p class="work-text">Web Site</p>
+                </div>
+              </a>
             </li>
 
             <li class="item">
@@ -174,9 +199,11 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="secondary-tittle">Fresh Coffee</h2>
-                <p class="work-text">Web Site</p></a
-              >
+                <div class="portfolio-text">
+                  <h2 class="secondary-tittle">Fresh Coffee</h2>
+                  <p class="work-text">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
